<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Design.NoActionBar"
    tools:context=".fragments.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:layout_marginHorizontal="10dp"
        tools:ignore="UselessParent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5sp"
            android:layout_weight="2"
            android:elevation="11dp"
            app:cardCornerRadius="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFE5B4"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_weight="3"
                        android:fontFamily="serif"
                        android:gravity="center|start"
                        android:text="@string/blood"
                        android:textColor="@color/black"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="75dp"
                        android:layout_marginStart="20dp"
                        android:layout_weight="0.5"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/hourglass" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center|start"
                        android:text="@string/_10_min"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/startButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="7dp"
                    android:layout_weight="1.3"
                    android:backgroundTint="#4CAF50"
                    android:drawableEnd="@drawable/baseline_arrow_circle_right_24"
                    android:fontFamily="sans-serif"
                    android:paddingHorizontal="35dp"
                    android:text="Start"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</FrameLayout>