<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6FCFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.QuizFragment">

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"

        android:alpha="0.4" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"

            android:padding="16dp"
            >
            <com.google.android.material.card.MaterialCardView
                android:theme="@style/Theme.MaterialComponents.Light"
                android:id="@+id/cardView"
                android:layout_width="240dp"
                android:layout_gravity="center|start"
                android:layout_height="60dp"
                app:cardCornerRadius="25dp"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#3CAAED"
                    android:translationZ="1dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="3dp">

                    <TextView
                        android:id="@+id/question_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme"

                        android:text="@string/question"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/questionNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/acme"
                        android:text="@string/_1"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/acme"
                        android:text="@string/_10"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:theme="@style/Theme.MaterialComponents.Light"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="10dp"
                android:elevation="11dp"
                app:cardElevation="11dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/black"
                android:layout_marginHorizontal="15dp">

                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:padding="10dp"

                    android:textAlignment="center"
                    android:textColor="#546E7A"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:layout_marginHorizontal="35dp"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:id="@+id/option1CardView"
                    app:cardCornerRadius="25dp"
                    android:backgroundTint="#FFE5B4"
                    android:gravity="center"
                    android:padding="10dp"

                    android:clickable="true"
                    android:focusable="true">



                        <TextView
                            android:id="@+id/option1Text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            
                            android:gravity="center"
                            android:textAllCaps="true"
                            android:textSize="14sp"
                            android:fontFamily="@font/acme"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            />

                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:id="@+id/option2CardView"
                    app:cardCornerRadius="25dp"
                    android:backgroundTint="#FFE5B4"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_marginTop="25sp"
                    android:clickable="true"
                    android:focusable="true">



                    <TextView
                        android:id="@+id/option2Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:textSize="14sp"
                        android:fontFamily="@font/acme"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        />

                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:id="@+id/option3CardView"
                    app:cardCornerRadius="25dp"
                    android:backgroundTint="#FFE5B4"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_marginTop="25sp"

                    android:clickable="true"
                    android:focusable="true">



                    <TextView
                        android:id="@+id/option3Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:textSize="14sp"
                        android:fontFamily="@font/acme"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        />

                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:id="@+id/option4CardView"
                    app:cardCornerRadius="25dp"
                    android:backgroundTint="#FFE5B4"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_marginTop="25sp"

                    android:clickable="true"
                    android:focusable="true">



                    <TextView
                        android:id="@+id/option4Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:textSize="14sp"
                        android:fontFamily="@font/acme"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        />

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="50dp"
                android:layout_gravity="start"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.card.MaterialCardView
                android:theme="@style/Theme.MaterialComponents.Light"
                    android:id="@+id/checkAnswerCardView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="60dp"
                    app:cardCornerRadius="10dp"
                    android:translationZ="1dp"
                    app:cardBackgroundColor="#7589a4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/acme"
                        android:gravity="center"
                        android:text="@string/check_answer"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:id="@+id/checkScoreCardView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="60dp"
                    app:cardCornerRadius="10dp"
                    android:visibility="gone"
                    android:translationZ="1dp"
                    app:cardBackgroundColor="#7589a4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/acme"
                        android:gravity="center"
                        android:text="@string/check_score"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                android:theme="@style/Theme.MaterialComponents.Light"
                    android:id="@+id/nextQuestionCardView"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="10dp"
                    app:cardBackgroundColor="#3CAAED"
                    android:layout_marginStart="20dp">

                    <ImageView
                        android:contentDescription="@string/todo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:src="@drawable/baseline_keyboard_arrow_right_24" />

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</FrameLayout>